--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <resources>
-  <color name="splashscreen_background">#FFFFFF</color>
+  <color name="splashscreen_background">#1E40AF</color>
   <color name="iconBackground">#1E40AF</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#1E40AF</color>
